argocd/kong.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong
